refactor: optimize and upgrade the code to JDK 21